kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      serviceAccountName: ${K8S_SERVICEACCOUNT}
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ${K8S_ECR_SECRET_NAME}
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  ports:
    - port: 3000
      nodePort: ${K8S_NODEPORT}
  selector:
    app: ${APPLICATION_NAME}
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: DevOps
    gethomepage.dev/name: Pod Viewer
    gethomepage.dev/description: Status and logs
    gethomepage.dev/icon: https://raw.githubusercontent.com/kubernetes/community/refs/heads/master/icons/png/resources/labeled/pod-256.png
    gethomepage.dev/pod-selector: app=${APPLICATION_NAME}
spec:
  rules:
    - host: pod-viewer.higashikariya.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  number: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: DevOps
    gethomepage.dev/name: Pod Viewer
    gethomepage.dev/description: Status and logs
    gethomepage.dev/icon: https://raw.githubusercontent.com/kubernetes/community/refs/heads/master/icons/png/resources/labeled/pod-256.png
    gethomepage.dev/pod-selector: app=${APPLICATION_NAME}
spec:
  hostnames:
    - pod-viewer.higashikariya.jtektrnd.net
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ${APPLICATION_NAME}
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
